[package]
name = "ramhorns-ext"
version = "0.17.0"
authors = ["Evan Zhang <evanzp0@qq.com>"]
license = "GPL-3.0"
edition = "2018"
description = "Experimental Mustache-like templating engine."
repository = "https://github.com/evanzp0/ramhorns-ext"
documentation = "https://docs.rs/ramhorns-ext"
readme = "../README.md"
keywords = ["html", "template", "mustache", "ramhorns"]
categories = ["template-engine"]

[dependencies]
arrayvec = "0.7.2"
beef = "0.5.2"
fnv = "1.0"
pulldown-cmark = { version = "0.9", default_features = false, optional = true }
ramhorns-derive-ext = { version = "0.17.0", optional = true }
logos = "0.13.0"
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.5", features = ["serde"], optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
default = ["export_derive", "pulldown-cmark"]

# Re-exports the `Context` derive macro, so that end user only needs to
# import this crate and `use ramhorns::Context` to get both the trait and
# derive proc macro.
export_derive = ["ramhorns-derive-ext"]
